--- a/Static/franciscomatignon.html
+++ b/Static/franciscomatignon.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <object id="logo" data="../images/FM LOGO SVG.svg" width="42"> </object>
+    <object id="logo" data="../images/FM LOGO SVG.svg" width="42px"> </object>
     <nav>
       <a id="About" href="">About</a>
       <a id="work" href="">Work</a>  
