--- a/Dynamic/franciscomatignon/src/index.html
+++ b/Dynamic/franciscomatignon/src/index.html
@@ -5,8 +5,33 @@
   <title>A - rendering studio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="franciscomatignon.com\Dynamic\franciscomatignon\src\cssreset.css">
+
+  <!-- FAVICONS -->
+    <!-- generics -->
+  <link rel="icon" href="./assets/favicons/favicon-32.png" sizes="32x32">
+  <link rel="icon" href="./assets/favicons/favicon-57.png" sizes="57x57">
+  <link rel="icon" href="./assets/favicons/favicon-76.png" sizes="76x76">
+  <link rel="icon" href="./assets/favicons/favicon-96.png" sizes="96x96">
+  <link rel="icon" href="./assets/favicons/favicon-128.png" sizes="128x128">
+  <link rel="icon" href="./assets/favicons/favicon-192.png" sizes="192x192">
+  <link rel="icon" href="./assets/favicons/favicon-228.png" sizes="228x228">
+
+  <!-- Android -->
+  <link rel="shortcut icon" sizes="196x196" href=“./assets/favicons/favicon-196.png" >
+
+  <!-- iOS -->
+  <link rel="apple-touch-icon" href="./assets/favicons/favicon-120.png" sizes="120x120">
+  <link rel="apple-touch-icon" href="path/to/favicon-152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="path/to/favicon-180.png" sizes="180x180">
+
+  <!-- Windows 8  IE 10-->
+  <meta name="msapplication-TileColor" content="#FFFFFF">
+  <meta name="msapplication-TileImage" content="./assets/favicons/favicon-144.png">
+
+  <!-- Windows 8.1 + IE11 and above -->
+  <meta name="msapplication-config" content="./assets/favicons/browserconfig.xml" />
+  <!-- END FAVICONS -->
 </head>
 <body>
   <app-root></app-root>
